{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 194,
  "lineage": "e90a672d-a029-8ca5-e643-be176eb0754d",
  "resources": [
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e1685ba8273631d",
            "arn": "arn:aws:ec2:us-east-1:721500739616:elastic-ip/eipalloc-09e1685ba8273631d",
            "association_id": "eipassoc-073459cee1c51d30a",
            "domain": "vpc",
            "id": "eipalloc-09e1685ba8273631d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-039672952a9815dcc",
            "private_dns": "ip-10-1-100-42.ec2.internal",
            "private_ip": "10.1.100.42",
            "public_dns": "ec2-44-208-111-107.compute-1.amazonaws.com",
            "public_ip": "44.208.111.107",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:internet-gateway/igw-0521e42e6814c9340",
            "id": "igw-0521e42e6814c9340",
            "owner_id": "721500739616",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-backend-igw"
            },
            "tags_all": {
              "Name": "vpc-backend-igw"
            },
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e1685ba8273631d",
            "association_id": "eipassoc-073459cee1c51d30a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08eec7f65478fb213",
            "network_interface_id": "eni-039672952a9815dcc",
            "private_ip": "10.1.100.42",
            "public_ip": "44.208.111.107",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ea41aa27cc4a9393",
            "tags": {
              "Name": "vpc-backend-nat"
            },
            "tags_all": {
              "Name": "vpc-backend-nat"
            },
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_vpc.aws_eip.nat",
            "module.backend_vpc.aws_internet_gateway.this",
            "module.backend_vpc.aws_subnet.public",
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:route-table/rtb-07b7278438e208be0",
            "id": "rtb-07b7278438e208be0",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08eec7f65478fb213",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-backend-private-rt"
            },
            "tags_all": {
              "Name": "vpc-backend-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "rtb-07b7278438e208be0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend_vpc.aws_eip.nat",
            "module.backend_vpc.aws_internet_gateway.this",
            "module.backend_vpc.aws_nat_gateway.this",
            "module.backend_vpc.aws_subnet.public",
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:route-table/rtb-09a1b679f11ba8b27",
            "id": "rtb-09a1b679f11ba8b27",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0521e42e6814c9340",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-backend-public-rt"
            },
            "tags_all": {
              "Name": "vpc-backend-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "rtb-09a1b679f11ba8b27",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend_vpc.aws_internet_gateway.this",
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9a3aa165e5cd83",
            "region": "us-east-1",
            "route_table_id": "rtb-07b7278438e208be0",
            "subnet_id": "subnet-0b932ef114c8d7200"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_vpc.aws_eip.nat",
            "module.backend_vpc.aws_internet_gateway.this",
            "module.backend_vpc.aws_nat_gateway.this",
            "module.backend_vpc.aws_route_table.private",
            "module.backend_vpc.aws_subnet.private",
            "module.backend_vpc.aws_subnet.public",
            "module.backend_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db10e854040bbaa1",
            "region": "us-east-1",
            "route_table_id": "rtb-07b7278438e208be0",
            "subnet_id": "subnet-00eabd3dab7524402"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_vpc.aws_eip.nat",
            "module.backend_vpc.aws_internet_gateway.this",
            "module.backend_vpc.aws_nat_gateway.this",
            "module.backend_vpc.aws_route_table.private",
            "module.backend_vpc.aws_subnet.private",
            "module.backend_vpc.aws_subnet.public",
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019d269f4021d45fc",
            "region": "us-east-1",
            "route_table_id": "rtb-09a1b679f11ba8b27",
            "subnet_id": "subnet-0ea41aa27cc4a9393"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_vpc.aws_internet_gateway.this",
            "module.backend_vpc.aws_route_table.public",
            "module.backend_vpc.aws_subnet.public",
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:security-group/sg-0edc03eb8c5534ad1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edc03eb8c5534ad1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "vpc-backend-eks-sg",
            "name_prefix": "",
            "owner_id": "721500739616",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-backend-eks-sg"
            },
            "tags_all": {
              "Name": "vpc-backend-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "sg-0edc03eb8c5534ad1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_allow_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 5678,
            "id": "sgrule-1008238047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0edc03eb8c5534ad1",
            "security_group_rule_id": "sgr-0229036a577d7c61c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5678,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_vpc.aws_security_group.eks",
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:subnet/subnet-0b932ef114c8d7200",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b932ef114c8d7200",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-backend-private-0"
            },
            "tags_all": {
              "Name": "vpc-backend-private-0"
            },
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "subnet-0b932ef114c8d7200",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:subnet/subnet-00eabd3dab7524402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eabd3dab7524402",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-backend-private-1"
            },
            "tags_all": {
              "Name": "vpc-backend-private-1"
            },
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "subnet-00eabd3dab7524402",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:subnet/subnet-0ea41aa27cc4a9393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea41aa27cc4a9393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-backend-public"
            },
            "tags_all": {
              "Name": "vpc-backend-public"
            },
            "vpc_id": "vpc-0bdfc5dfb6dc4e40f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "subnet-0ea41aa27cc4a9393",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:vpc/vpc-0bdfc5dfb6dc4e40f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05cf0aaa019185bc6",
            "default_route_table_id": "rtb-0578b4860ab77717f",
            "default_security_group_id": "sg-0a5173b0e082105e2",
            "dhcp_options_id": "dopt-01ebea7c8afd6b2ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdfc5dfb6dc4e40f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0578b4860ab77717f",
            "owner_id": "721500739616",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-backend"
            },
            "tags_all": {
              "Name": "vpc-backend"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "vpc-0bdfc5dfb6dc4e40f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0387f9cc61db8091f",
            "arn": "arn:aws:ec2:us-east-1:721500739616:elastic-ip/eipalloc-0387f9cc61db8091f",
            "association_id": "eipassoc-0521502d2ddf55025",
            "domain": "vpc",
            "id": "eipalloc-0387f9cc61db8091f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-012de2929b1f6d397",
            "private_dns": "ip-10-0-100-148.ec2.internal",
            "private_ip": "10.0.100.148",
            "public_dns": "ec2-3-218-246-40.compute-1.amazonaws.com",
            "public_ip": "3.218.246.40",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:internet-gateway/igw-0014132b603334023",
            "id": "igw-0014132b603334023",
            "owner_id": "721500739616",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-gateway-igw"
            },
            "tags_all": {
              "Name": "vpc-gateway-igw"
            },
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0387f9cc61db8091f",
            "association_id": "eipassoc-0521502d2ddf55025",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f61416477f0992ae",
            "network_interface_id": "eni-012de2929b1f6d397",
            "private_ip": "10.0.100.148",
            "public_ip": "3.218.246.40",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0feb3688314665956",
            "tags": {
              "Name": "vpc-gateway-nat"
            },
            "tags_all": {
              "Name": "vpc-gateway-nat"
            },
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateway_vpc.aws_eip.nat",
            "module.gateway_vpc.aws_internet_gateway.this",
            "module.gateway_vpc.aws_subnet.public",
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:route-table/rtb-0825b052e62e8ed27",
            "id": "rtb-0825b052e62e8ed27",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f61416477f0992ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-gateway-private-rt"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "rtb-0825b052e62e8ed27",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway_vpc.aws_eip.nat",
            "module.gateway_vpc.aws_internet_gateway.this",
            "module.gateway_vpc.aws_nat_gateway.this",
            "module.gateway_vpc.aws_subnet.public",
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:route-table/rtb-0eeeda668b22eeea6",
            "id": "rtb-0eeeda668b22eeea6",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0014132b603334023",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-gateway-public-rt"
            },
            "tags_all": {
              "Name": "vpc-gateway-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "rtb-0eeeda668b22eeea6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway_vpc.aws_internet_gateway.this",
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074a0078d3cc58892",
            "region": "us-east-1",
            "route_table_id": "rtb-0825b052e62e8ed27",
            "subnet_id": "subnet-0fc5225df6d53d245"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateway_vpc.aws_eip.nat",
            "module.gateway_vpc.aws_internet_gateway.this",
            "module.gateway_vpc.aws_nat_gateway.this",
            "module.gateway_vpc.aws_route_table.private",
            "module.gateway_vpc.aws_subnet.private",
            "module.gateway_vpc.aws_subnet.public",
            "module.gateway_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d7c3cbbe77ab105",
            "region": "us-east-1",
            "route_table_id": "rtb-0825b052e62e8ed27",
            "subnet_id": "subnet-0f36941f44146af14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateway_vpc.aws_eip.nat",
            "module.gateway_vpc.aws_internet_gateway.this",
            "module.gateway_vpc.aws_nat_gateway.this",
            "module.gateway_vpc.aws_route_table.private",
            "module.gateway_vpc.aws_subnet.private",
            "module.gateway_vpc.aws_subnet.public",
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088a197c6c739a623",
            "region": "us-east-1",
            "route_table_id": "rtb-0eeeda668b22eeea6",
            "subnet_id": "subnet-0feb3688314665956"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateway_vpc.aws_internet_gateway.this",
            "module.gateway_vpc.aws_route_table.public",
            "module.gateway_vpc.aws_subnet.public",
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:security-group/sg-0ecc89e07c253d537",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecc89e07c253d537",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "vpc-gateway-eks-sg",
            "name_prefix": "",
            "owner_id": "721500739616",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-gateway-eks-sg"
            },
            "tags_all": {
              "Name": "vpc-gateway-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "sg-0ecc89e07c253d537",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_allow_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 5678,
            "id": "sgrule-2755065767",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ecc89e07c253d537",
            "security_group_rule_id": "sgr-0000a8b6c92d627dd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5678,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateway_vpc.aws_security_group.eks",
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:subnet/subnet-0fc5225df6d53d245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc5225df6d53d245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-gateway-private-0"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-0"
            },
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "subnet-0fc5225df6d53d245",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:subnet/subnet-0f36941f44146af14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f36941f44146af14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-gateway-private-1"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-1"
            },
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "subnet-0f36941f44146af14",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:subnet/subnet-0feb3688314665956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0feb3688314665956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-gateway-public"
            },
            "tags_all": {
              "Name": "vpc-gateway-public"
            },
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "subnet-0feb3688314665956",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gateway_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721500739616:vpc/vpc-07e7bb2a48934cd80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e18b7d1f7f54d15c",
            "default_route_table_id": "rtb-086bd2a3d0297e69d",
            "default_security_group_id": "sg-093b39f6a2646a804",
            "dhcp_options_id": "dopt-01ebea7c8afd6b2ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e7bb2a48934cd80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086bd2a3d0297e69d",
            "owner_id": "721500739616",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-gateway"
            },
            "tags_all": {
              "Name": "vpc-gateway"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "id": "vpc-07e7bb2a48934cd80",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering_gateway_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "a_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0825b052e62e8ed273322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0825b052e62e8ed27",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0fc20137e89988651"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0825b052e62e8ed27"
          },
          "dependencies": [
            "module.backend_vpc.aws_vpc.this",
            "module.gateway_vpc.aws_eip.nat",
            "module.gateway_vpc.aws_internet_gateway.this",
            "module.gateway_vpc.aws_nat_gateway.this",
            "module.gateway_vpc.aws_route_table.private",
            "module.gateway_vpc.aws_subnet.public",
            "module.gateway_vpc.aws_vpc.this",
            "module.vpc_peering_gateway_backend.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_gateway_backend",
      "mode": "managed",
      "type": "aws_route",
      "name": "b_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b7278438e208be0179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07b7278438e208be0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0fc20137e89988651"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "721500739616",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-07b7278438e208be0"
          },
          "dependencies": [
            "module.backend_vpc.aws_eip.nat",
            "module.backend_vpc.aws_internet_gateway.this",
            "module.backend_vpc.aws_nat_gateway.this",
            "module.backend_vpc.aws_route_table.private",
            "module.backend_vpc.aws_subnet.public",
            "module.backend_vpc.aws_vpc.this",
            "module.gateway_vpc.aws_vpc.this",
            "module.vpc_peering_gateway_backend.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_gateway_backend",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0fc20137e89988651",
            "peer_owner_id": "721500739616",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0bdfc5dfb6dc4e40f",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-07e7bb2a48934cd80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_vpc.aws_vpc.this",
            "module.gateway_vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}